--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,8 @@ jobs:
                         secrets.GCP_BUCKET_NAME != '' &&
                         secrets.GCP_PROJECT_NAME != '' &&
                         secrets.FOXAI_SUNO_API_KEY != '' &&
-                        secrets.SUNO_API_URL != '' }}
+                        secrets.SUNO_API_URL != '' &&
+                        secrets.GANGLIA_TEMP_DIR != '' }}
 
     steps:
     - uses: actions/checkout@v3
@@ -46,32 +47,28 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
-    - name: Get GANGLIA temp directory
-      id: tempdir
+    - name: Create temp directories
       run: |
-        TEMP_DIR=$(python3 -c "import sys; sys.path.append('$PWD'); from utils.file_utils import get_tempdir; print(get_tempdir())")
-        echo "GANGLIA_TEMP_DIR=$TEMP_DIR" >> $GITHUB_ENV
-        mkdir -p $TEMP_DIR/{logs,credentials}
+        mkdir -p ${{ secrets.GANGLIA_TEMP_DIR }}/{logs,credentials}
 
     - name: Set up Google Application Credentials
       run: |
-        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
+        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
 
     - name: Set up YouTube credentials
       run: |
-        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/youtube_credentials.json
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/youtube_credentials.json
+        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_credentials.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_credentials.json
 
     - name: Set up YouTube token
       run: |
-        # Decode and validate token
-        echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/youtube_token.json
-        if ! jq empty $GANGLIA_TEMP_DIR/credentials/youtube_token.json 2>/dev/null; then
+        echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
+        if ! jq empty ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json 2>/dev/null; then
           echo "Error: Invalid JSON in decoded token file"
           exit 1
         fi
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/youtube_token.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
 
     - name: Make run_tests.sh executable
       run: chmod +x run_tests.sh
@@ -83,8 +80,9 @@ jobs:
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
         FOXAI_SUNO_API_KEY: ${{ secrets.FOXAI_SUNO_API_KEY }}
         SUNO_API_URL: ${{ secrets.SUNO_API_URL }}
-        GOOGLE_APPLICATION_CREDENTIALS: $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
-        YOUTUBE_TOKEN_FILE: $GANGLIA_TEMP_DIR/credentials/youtube_token.json
+        GANGLIA_TEMP_DIR: ${{ secrets.GANGLIA_TEMP_DIR }}
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
+        YOUTUBE_TOKEN_FILE: ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
         UPLOAD_SMOKE_TESTS_TO_YOUTUBE: 'false'
         UPLOAD_INTEGRATION_TESTS_TO_YOUTUBE: 'false'
       run: ./run_tests.sh docker unit
@@ -94,7 +92,7 @@ jobs:
       run: |
         echo "Checking test logs for GCP and YouTube links..."
         # Find the most recent log file
-        LOG_FILE=$(ls -t $GANGLIA_TEMP_DIR/logs/test_run_docker_unit_*.log | head -n 1)
+        LOG_FILE=$(ls -t ${{ secrets.GANGLIA_TEMP_DIR }}/logs/test_run_docker_unit_*.log | head -n 1)
         if [ -f "$LOG_FILE" ]; then
           echo "Using log file: $LOG_FILE"
           # Extract GCP link
@@ -114,7 +112,7 @@ jobs:
     - name: Clean up
       if: always()
       run: |
-        rm -rf $GANGLIA_TEMP_DIR/credentials
+        rm -rf ${{ secrets.GANGLIA_TEMP_DIR }}/credentials
 
   smoke-tests:
     needs: unit-tests
@@ -129,7 +127,8 @@ jobs:
                         secrets.GCP_BUCKET_NAME != '' &&
                         secrets.GCP_PROJECT_NAME != '' &&
                         secrets.FOXAI_SUNO_API_KEY != '' &&
-                        secrets.SUNO_API_URL != '' }}
+                        secrets.SUNO_API_URL != '' &&
+                        secrets.GANGLIA_TEMP_DIR != '' }}
 
     steps:
     - uses: actions/checkout@v3
@@ -156,31 +155,28 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
-    - name: Get GANGLIA temp directory
-      id: tempdir
+    - name: Create temp directories
       run: |
-        TEMP_DIR=$(python3 -c "import sys; sys.path.append('$PWD'); from utils.file_utils import get_tempdir; print(get_tempdir())")
-        echo "GANGLIA_TEMP_DIR=$TEMP_DIR" >> $GITHUB_ENV
-        mkdir -p $TEMP_DIR/{logs,credentials}
+        mkdir -p ${{ secrets.GANGLIA_TEMP_DIR }}/{logs,credentials}
 
     - name: Set up Google Application Credentials
       run: |
-        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
+        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
 
     - name: Set up YouTube credentials
       run: |
-        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/youtube_credentials.json
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/youtube_credentials.json
+        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_credentials.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_credentials.json
 
     - name: Set up YouTube token
       run: |
-        echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/youtube_token.json
-        if ! jq empty $GANGLIA_TEMP_DIR/credentials/youtube_token.json 2>/dev/null; then
+        echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
+        if ! jq empty ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json 2>/dev/null; then
           echo "Error: Invalid JSON in token file"
           exit 1
         fi
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/youtube_token.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
 
     - name: Make run_tests.sh executable
       run: chmod +x run_tests.sh
@@ -192,8 +188,9 @@ jobs:
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
         FOXAI_SUNO_API_KEY: ${{ secrets.FOXAI_SUNO_API_KEY }}
         SUNO_API_URL: ${{ secrets.SUNO_API_URL }}
-        GOOGLE_APPLICATION_CREDENTIALS: $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
-        YOUTUBE_TOKEN_FILE: $GANGLIA_TEMP_DIR/credentials/youtube_token.json
+        GANGLIA_TEMP_DIR: ${{ secrets.GANGLIA_TEMP_DIR }}
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
+        YOUTUBE_TOKEN_FILE: ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
         UPLOAD_SMOKE_TESTS_TO_YOUTUBE: 'true'
         UPLOAD_INTEGRATION_TESTS_TO_YOUTUBE: 'false'
       run: ./run_tests.sh docker smoke
@@ -203,7 +200,7 @@ jobs:
       run: |
         echo "Checking test logs for GCP and YouTube links..."
         # Find the most recent log file
-        LOG_FILE=$(ls -t $GANGLIA_TEMP_DIR/logs/test_run_docker_smoke_*.log | head -n 1)
+        LOG_FILE=$(ls -t ${{ secrets.GANGLIA_TEMP_DIR }}/logs/test_run_docker_smoke_*.log | head -n 1)
         if [ -f "$LOG_FILE" ]; then
           echo "Using log file: $LOG_FILE"
           # Extract GCP link
@@ -223,7 +220,7 @@ jobs:
     - name: Clean up
       if: always()
       run: |
-        rm -rf $GANGLIA_TEMP_DIR/credentials
+        rm -rf ${{ secrets.GANGLIA_TEMP_DIR }}/credentials
 
   integration-tests:
     if: github.event_name == 'pull_request'
@@ -237,7 +234,8 @@ jobs:
                         secrets.GCP_BUCKET_NAME != '' &&
                         secrets.GCP_PROJECT_NAME != '' &&
                         secrets.FOXAI_SUNO_API_KEY != '' &&
-                        secrets.SUNO_API_URL != '' }}
+                        secrets.SUNO_API_URL != '' &&
+                        secrets.GANGLIA_TEMP_DIR != '' }}
 
     steps:
     - uses: actions/checkout@v3
@@ -264,31 +262,28 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
-    - name: Get GANGLIA temp directory
-      id: tempdir
+    - name: Create temp directories
       run: |
-        TEMP_DIR=$(python3 -c "import sys; sys.path.append('$PWD'); from utils.file_utils import get_tempdir; print(get_tempdir())")
-        echo "GANGLIA_TEMP_DIR=$TEMP_DIR" >> $GITHUB_ENV
-        mkdir -p $TEMP_DIR/{logs,credentials}
+        mkdir -p ${{ secrets.GANGLIA_TEMP_DIR }}/{logs,credentials}
 
     - name: Set up Google Application Credentials
       run: |
-        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
+        echo "${{ secrets.GCP_SA_KEY_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
 
     - name: Set up YouTube credentials
       run: |
-        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/youtube_credentials.json
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/youtube_credentials.json
+        echo "${{ secrets.YOUTUBE_CREDENTIALS_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_credentials.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_credentials.json
 
     - name: Set up YouTube token
       run: |
-        echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > $GANGLIA_TEMP_DIR/credentials/youtube_token.json
-        if ! jq empty $GANGLIA_TEMP_DIR/credentials/youtube_token.json 2>/dev/null; then
+        echo "${{ secrets.YOUTUBE_TOKEN_BASE64 }}" | base64 -d > ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
+        if ! jq empty ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json 2>/dev/null; then
           echo "Error: Invalid JSON in token file"
           exit 1
         fi
-        chmod 600 $GANGLIA_TEMP_DIR/credentials/youtube_token.json
+        chmod 600 ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
 
     - name: Make run_tests.sh executable
       run: chmod +x run_tests.sh
@@ -300,9 +295,10 @@ jobs:
         GCP_PROJECT_NAME: ${{ secrets.GCP_PROJECT_NAME }}
         FOXAI_SUNO_API_KEY: ${{ secrets.FOXAI_SUNO_API_KEY }}
         SUNO_API_URL: ${{ secrets.SUNO_API_URL }}
-        GOOGLE_APPLICATION_CREDENTIALS: $GANGLIA_TEMP_DIR/credentials/gcp-credentials.json
-        YOUTUBE_CREDENTIALS_FILE: $GANGLIA_TEMP_DIR/credentials/youtube_credentials.json
-        YOUTUBE_TOKEN_FILE: $GANGLIA_TEMP_DIR/credentials/youtube_token.json
+        GANGLIA_TEMP_DIR: ${{ secrets.GANGLIA_TEMP_DIR }}
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/gcp-credentials.json
+        YOUTUBE_CREDENTIALS_FILE: ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_credentials.json
+        YOUTUBE_TOKEN_FILE: ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
         UPLOAD_SMOKE_TESTS_TO_YOUTUBE: 'false'
         UPLOAD_INTEGRATION_TESTS_TO_YOUTUBE: 'true'
       run: ./run_tests.sh docker integration
@@ -312,7 +308,7 @@ jobs:
       run: |
         echo "Checking test logs for GCP and YouTube links..."
         # Find the most recent log file
-        LOG_FILE=$(ls -t $GANGLIA_TEMP_DIR/logs/test_run_docker_integration_*.log | head -n 1)
+        LOG_FILE=$(ls -t ${{ secrets.GANGLIA_TEMP_DIR }}/logs/test_run_docker_integration_*.log | head -n 1)
         if [ -f "$LOG_FILE" ]; then
           echo "Using log file: $LOG_FILE"
           # Extract GCP link
@@ -332,4 +328,4 @@ jobs:
     - name: Clean up
       if: always()
       run: |
-        rm -rf $GANGLIA_TEMP_DIR/credentials
+        rm -rf ${{ secrets.GANGLIA_TEMP_DIR }}/credentials
