--- a/config/vad_config.json
+++ b/config/vad_config.json
@@ -17,8 +17,8 @@
   },
 
   "timing": {
-    "silence_threshold": 0.5,
-    "comment_silence_threshold": "Seconds of silence before marking user as 'done speaking' within a conversation. Default: 2.5. CURRENT: 0.5 (VERY FAST response, may cut off if you pause mid-sentence)",
+    "silence_threshold": 0.75,
+    "comment_silence_threshold": "Seconds of silence before marking user as 'done speaking' within a conversation. Default: 2.5. CURRENT: 0.75 (balanced - fast response without cutting off mid-sentence)",
 
     "conversation_timeout": 5,
     "comment_conversation_timeout": "Seconds of silence before returning to idle listening mode (stops Google API streaming). Default: 30. CURRENT: 5 (quick timeout for outdoor environment with passing cars)"
