--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -233,6 +233,7 @@ jobs:
         YOUTUBE_TOKEN_FILE: ${{ secrets.GANGLIA_TEMP_DIR }}/credentials/youtube_token.json
         UPLOAD_SMOKE_TESTS_TO_YOUTUBE: 'true'
         UPLOAD_INTEGRATION_TESTS_TO_YOUTUBE: 'false'
+        SKIP_STRICT_CAPTION_VALIDATION: 'true'
       run: ./run_tests.sh docker smoke
 
     - name: Display Test Links
